--- a/html/Tutorial-advanced-search-deprecated.html
+++ b/html/Tutorial-advanced-search-deprecated.html
@@ -13,7 +13,7 @@
 
   <link type="text/css" rel="stylesheet" href="master.css">
 
-  <title>Cell Circuits - Tutorial (Page 2/3) - Advanced Search</title>
+  <title>Cell Circuits - Tutorial (Page 2/4) - Advanced Search</title>
 
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 
@@ -126,8 +126,7 @@
     </td>
     <td>
 
-    Models are sorted by the number of matching query terms, i.e. gene names or GO term accessions/names.
-    More sort options may be added in the future.
+    Models are currently sorted by the number of matching query terms, i.e. gene names or GO term accessions/names.  Sorting options may be added in the future.
 <!--   <a class="white-bg-link" href="FAQ">For a more in depth explanation, see FAQ.</a><br/><br/> -->
 
 
