--- a/html/Tutorial-home.html
+++ b/html/Tutorial-home.html
@@ -43,15 +43,15 @@
        <br><br>
 -->       
        <div class="left-col">
-         <a class="blue-link" href="http://cellcircuits.org">CellCircuits Home</a><br><br>
-	 <a class="blue-link" href="about_cell_circuits.html">About CellCircuits</a><br><br>
-         <a class="black-no-decoration-link" href="http://cellcircuits.org">Tutorial</a><br><br>
-         <a class="grey-indented-no-decoration-link" href="http://cellcircuits.org">Welcome</a><br><br>
-         <a class="blue-indented-link" href="http://cellcircuits.org">Advanced Search</a><br><br>
-         <a class="blue-indented-link" href="http://cellcircuits.org">Results - 1 of 2</a><br><br>
-         <a class="blue-indented-link" href="http://cellcircuits.org">Results - 2 of 2</a><br><br>
-         <a class="blue-link" href="http://www-bioeng.ucsd.edu/faculty/area/ideker_lab">Ideker Lab</a><br><br>
-         <a class="blue-link" href="http://www-bioeng.ucsd.edu/">UCSD</a><br>
+         <a class="blue-link" href="http://cellcircuits.org" title="CellCircuits Home">CellCircuits Home</a><br><br>
+	 <a class="blue-link" href="about_cell_circuits.html" title="About CellCircuits">About CellCircuits</a><br><br>
+         <a class="black-no-decoration-link" href="Tutorial-home.html" title="Have Questions? Take the Cellcircuits tour">Tutorial</a><br><br>
+         <a class="grey-indented-no-decoration-link" href="Tutorial-home.html">Welcome</a><br><br>
+         <a class="blue-indented-link" href="Tutorial-advanced-search.html">Advanced Search</a><br><br>
+         <a class="blue-indented-link" href="Tutorial-results-1.html">Results - 1 of 2</a><br><br>
+         <a class="blue-indented-link" href="Tutorial-results-2.html">Results - 2 of 2</a><br><br>
+         <a class="blue-link" href="http://www-bioeng.ucsd.edu/faculty/area/ideker_lab" title="Dr. Trey Ideker's Lab Home Page">Ideker Lab</a><br><br>
+         <a class="blue-link" href="http://www-bioeng.ucsd.edu/" title="UCSD Bioengineering Home Page">UCSD</a><br>
 
        </div>
 
@@ -65,12 +65,11 @@
 
            <table border=0>
 
-	   <tr>
-	     <td colspan=5 align=right>
-	       <a href="Tutorial-advanced-search.html"><img src="images/tutorial/red-back.gif" align=absmiddle border=0></img></a>
-               <a href="Tutorial-advanced-search.html"><img src="images/tutorial/red-next.gif" align=absmiddle border=0></img></a>
-	     </td>
-	   </tr>
+	     <tr>
+	       <td colspan=5 align=right>
+                 <a href="Tutorial-advanced-search.html"><img src="images/tutorial/red-next.gif" align=absmiddle border=0></img></a>
+	       </td>
+	     </tr>
 
 	     <tr>
 	       <td colspan=5>
@@ -87,24 +86,22 @@
 	       </td>
 	     </tr>
 
-             <tr id="explanation" valign="top">
+             <tr id="explanation" valign="center">
   
                <td width=40 valign=center>
-                 <img src="1_red.gif"></img>
+                 <img src="images/tutorial/1_red.gif"></img>
                </td>
-
-               <td class="explanation-header">
-                  Search
+               <td width=250>
+                  <span class="explanation-header">Search</span>
                </td>
 
 	       <td>&nbsp;&nbsp;</td>
 
                <td width=40 valign=center>
-                 <img src="2_red.gif"></img>
+                 <img src="images/tutorial/2_red.gif"></img>
                </td>
-
-               <td class="explanation-header">
-                 Load an Example
+               <td width=250>
+                 <span class="explanation-header">Load an Example</span>
                </td>
 
              </tr>
@@ -143,7 +140,7 @@
 
 	     <tr>
 	       <td colspan=5 align=right>
-	         <a href="Tutorial-advanced-search.html"><img src="images/tutorial/red-back.gif" align=absmiddle border=0></img></a>
+<!--	         <a href="Tutorial-advanced-search.html"><img src="images/tutorial/red-back.gif" align=absmiddle border=0></img></a>-->
 	         <a href="Tutorial-advanced-search.html"><img src="images/tutorial/red-next.gif" align=absmiddle border=0></img></a>
 	       </td>
              </tr>
@@ -163,11 +160,11 @@
 
 <center>
 
-<a class="blue-link" href="index.html" title="Click to go to the CellCircuits Home Page">CellCircuits&nbsp;Home</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-<a class="blue-link" href="about_cell_circuits.html">About CellCircuits</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-<a class="blue-link" href="Tutorial-home.html">Help</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-<a class="blue-link" href="http://www-bioeng.ucsd.edu/faculty/area/ideker_lab">Ideker Lab</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-<a class="blue-link" href="http://www-bioeng.ucsd.edu/">UCSD</a><br />
+<a class="blue-link" href="http://cellcircuits.org" title="CellCircuits Home Page">CellCircuits&nbsp;Home</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+<a class="blue-link" href="about_cell_circuits.html" title="About Cellcircuits">About CellCircuits</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+<a class="blue-link" href="Tutorial-home.html" title="Have Questions? Take the Cellcircuits tour">Help</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+<a class="blue-link" href="http://www-bioeng.ucsd.edu/faculty/area/ideker_lab" title="Dr. Trey Ideker's Lab Home Page">Ideker Lab</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+<a class="blue-link" href="http://www-bioeng.ucsd.edu/" title="UCSD Bioengineering Home Page">UCSD</a><br />
 <p style="font-size: 0.8em">Funding provided by the National Science Foundation (NSF 0425926).</p>
 
 </center>
