--- a/html/Tutorial-results-1.html
+++ b/html/Tutorial-results-1.html
@@ -14,7 +14,7 @@
   <!--<link type="text/css" rel="stylesheet" href="master.css">-->
   <link type="text/css" rel="stylesheet" href="css/tutorial.css">
 
-  <title>Cell Circuits - Tutorial (Page 2/4) - Advanced Search</title>
+  <title>Cell Circuits - Tutorial (Page 3/4) - Results</title>
 
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 
@@ -30,7 +30,7 @@
         <a href="http://www.cellcircuits.org"><img src="CC-logo-xxsmall.jpg" border=0></img></a>
      </td>
 
-     <td class="tutorial-title-header" align=left valign=bottom>Tutorial (2 of 4)</td>
+     <td class="tutorial-title-header" align=left valign=bottom>Tutorial (3 of 4)</td>
 
   </tr>
   <tr>
@@ -42,8 +42,8 @@
 	 <a class="blue-link" href="about_cell_circuits.html" title="About CellCircuits">About CellCircuits</a><br><br>
          <a class="black-no-decoration-link" href="Tutorial-home.html" title="Have Questions? Take the Cellcircuits tour">Tutorial</a><br><br>
          <a class="blue-indented-link" href="Tutorial-home.html">Welcome</a><br><br>
-         <a class="grey-indented-no-decoration-link" href="Tutorial-advanced-search.html">Advanced Search</a><br><br>
-         <a class="blue-indented-link" href="Tutorial-results-1.html">Results - 1 of 2</a><br><br>
+         <a class="blue-indented-link" href="Tutorial-advanced-search.html">Advanced Search</a><br><br>
+         <a class="grey-indented-no-decoration-link" href="Tutorial-results-1.html">Results - 1 of 2</a><br><br>
          <a class="blue-indented-link" href="Tutorial-results-2.html">Results - 2 of 2</a><br><br>
          <a class="blue-link" href="http://www-bioeng.ucsd.edu/faculty/area/ideker_lab" title="Dr. Trey Ideker's Lab Home Page">Ideker Lab</a><br><br>
          <a class="blue-link" href="http://www-bioeng.ucsd.edu/" title="UCSD Bioengineering Home Page">UCSD</a><br>
@@ -62,8 +62,8 @@
 
 	      <tr>
 	        <td colspan=5 align=right>
-	          <a href="Tutorial-home.html"><img src="images/tutorial/red-back.gif" align=absmiddle border=0></img></a>
-                  <a href="Tutorial-results-1.html"><img src="images/tutorial/red-next.gif" align=absmiddle border=0></img></a>
+	          <a href="Tutorial-advanced-search.html"><img src="images/tutorial/red-back.gif" align=absmiddle border=0></img></a>
+                  <a href="Tutorial-results-2.html"><img src="images/tutorial/red-next.gif" align=absmiddle border=0></img></a>
 	        </td>
 	      </tr>
 
@@ -71,10 +71,12 @@
 	       <td colspan=5>
                  <span class="welcome-header">Welcome to CellCircuits</span>
                  <div class="image">
-                   <img id="tutorial-img" src="images/tutorial/CC-advanced-search.gif" border=0 usemap="#home_tutorial_map" title="Home Tutorial image"></img>
+                   <img id="tutorial-img" src="images/tutorial/CC-results-1.gif" border=0 usemap="#home_tutorial_map" title="Home Tutorial image"></img>
                  </div>
 
                  <map name="home_tutorial_map">
+                   <area shape="circle" coords="44,198,32"  href="#explanation">
+                   <area shape="circle" coords="410,282,32"  href="#explanation">
                    <area shape="circle" coords="44,198,32"  href="#explanation">
                    <area shape="circle" coords="410,282,32"  href="#explanation">
                  </map>
@@ -88,7 +90,7 @@
                  <img src="images/tutorial/1_red.gif"></img>
                </td>
                <td width=250>
-	         <span class="explanation-header">Publications</span>
+	         <span class="explanation-header">Warnings</span>
                </td>
 
 	       <td>&nbsp;&nbsp;</td>
@@ -97,23 +99,32 @@
                  <img src="images/tutorial/2_red.gif"></img>
                </td>
                <td width=250>
-                  <span class="explanation-header">Select Species</span>
+                 <span class="explanation-header">Score</span>
                </td>
 
              </tr>
 
              <tr valign=top>
-               <td colspan=2>
+               <td colspan=2 rowspan=5>
 
-	         Limit the search by publication.  All publications are selected by default.
+	         Errors and warnings concerning the query are displayed in red here.  When the query matches a gene synonym, a message similar to this will appear: <br/><br/>
+      <p style="color:red">[query] matches:<br/>&nbsp&nbsp;&nbsp;&nbsp;[S], a synonym of G in O. G is shown in results.</p><br/>
+
+      S is the gene (S)ynonym matched by query.<br/>
+      G is the standard (G)ene symbol of S.<br/>
+      G is a gene in (O)rganism.<br/>
+      G will be shown and highlighted in the results, instead of S.<br/><br/>
+     
+This message helps interpret the results by alerting you to the standard gene names of synonyms that matched the query.
+In the example image at the top of the page, the query rad* matched synonyms of raps, SSL2, okr, HPR5, and, MRE11.
 
                </td>
 
-	       <td>&nbsp;&nbsp;</td>
+	       <td rowspan=5>&nbsp;&nbsp;</td>
 
                <td colspan=2 valign=top>
 
-	         Hold down the 'Ctrl' key to select/exclude species from your search.  All species are selected by default.
+	         Models are scored by the number of matching query terms, <em>i.e.</em> gene names, GO term accessions, and/or GO term names.<br>When viewing similar models, this score is the number of genes shared between the Query model and the model on each row of the results.
 
                </td>
 
@@ -125,16 +136,33 @@
                  <img src="images/tutorial/3_red.gif"></img>
                </td>
                <td width=250>
-                 <span class="explanation-header">Sort</span>
+                  <span class="explanation-header">Model</span>
                </td>
 
-	       <td>&nbsp;&nbsp;</td>
+	     </tr>
+
+	     <tr valign=top>
+               <td colspan=2>
+
+	         Clicking on the thumbnail gives you a larger picture of the model.  Links below may include:<br/>
+      <ul>
+        <li> [PubMed] - link to PubMed abstract</li>
+	<li> [legend] - link to legend/published-figures for interpreting the model
+	<li> [website] - link to supplementary website
+	<li> [sif] - text representation the model in <a class="white-bg-link" href="http://cytoscape.org">Cytoscape</a> (S)imple (I)nteraction (F)ormat.
+      </ul>                 
+
+               </td>
+
+	     </tr>
+
+	     <tr>
 
                <td width=40 valign=center>
                  <img src="images/tutorial/4_red.gif"></img>
                </td>
                <td width=250>
-                 <span class="explanation-header">P-value threshold</span>
+                 <span class="explanation-header">Matches</span>
                </td>
 
              </tr>
@@ -142,19 +170,7 @@
              <tr valign=top>
                <td colspan=2>
 
-                 Models are sorted by the number of matching query terms, <em>i.e</em>. gene names, GO term accessions, and/or GO term names.  Currently this is the only choice available.  More sorting/scoring metrics will be available soon.
-
-               </td>
-
-	       <td>&nbsp;&nbsp;</td>
-
-               <td colspan=2 valign=top>
-
-	         All search results are filtered using a P-value cutoff.  Valid P-values must be between 0 and 1 and may be entered in decimal or scientific notation (<em>e.g.</em> 0.001 or 1e-3). <br/><br/>
-      
-      <b>NOTE: To find all models containing a specific gene, use a P-value cutoff of 1.</b>
-      <br>
-      Smaller P-values limit the search, yielding fewer search results.<br/<br/>
+	         Query terms matching the model are highlighted here.
 
                </td>
 
@@ -163,8 +179,8 @@
 
 	     <tr>
 	       <td colspan=5 align=right>
-	         <a href="Tutorial-home.html"><img src="images/tutorial/red-back.gif" align=absmiddle border=0></img></a>
-	         <a href="Tutorial-results-1.html"><img src="images/tutorial/red-next.gif" align=absmiddle border=0></img></a>
+	         <a href="Tutorial-advanced-search.html"><img src="images/tutorial/red-back.gif" align=absmiddle border=0></img></a>
+	         <a href="Tutorial-results-2.html"><img src="images/tutorial/red-next.gif" align=absmiddle border=0></img></a>
 	       </td>
              </tr>
            </table>
