added finishing touches to tutorial in html/

--- a/html/Tutorial-advanced-search.html
+++ b/html/Tutorial-advanced-search.html
@@ -54,7 +54,7 @@
      </td>
 
 <!-- start of rest of stuff -->
-     <td>
+     <td class="footer-hr">
      
      <div class="tutorial-body">
 
@@ -69,7 +69,6 @@
 
 	     <tr>
 	       <td colspan=5>
-                 <span class="welcome-header">Welcome to CellCircuits</span>
                  <div class="image">
                    <img id="tutorial-img" src="images/tutorial/CC-advanced-search.gif" border=0 usemap="#home_tutorial_map" title="Home Tutorial image"></img>
                  </div>
@@ -179,7 +178,7 @@
 
 </table>
 
-<hr/>
+<br/>
 
 <center>
 
