--- a/html/Tutorial-home.html
+++ b/html/Tutorial-home.html
@@ -59,7 +59,7 @@
      </td>
 
 <!-- start of rest of stuff -->
-     <td>
+     <td class="footer-hr">
      
      <div class="tutorial-body">
 
@@ -156,7 +156,7 @@
 
 </table>
 
-<hr/>
+<br>
 
 <center>
 
