--- a/html/Tutorial-results-1.html
+++ b/html/Tutorial-results-1.html
@@ -54,7 +54,7 @@
      </td>
 
 <!-- start of rest of stuff -->
-     <td>
+     <td class="footer-hr">
      
      <div class="tutorial-body">
 
@@ -69,7 +69,7 @@
 
 	     <tr>
 	       <td colspan=5>
-                 <span class="welcome-header">Welcome to CellCircuits</span>
+
                  <div class="image">
                    <img id="tutorial-img" src="images/tutorial/CC-results-1.gif" border=0 usemap="#home_tutorial_map" title="Home Tutorial image"></img>
                  </div>
@@ -195,7 +195,7 @@ In the example image at the top of the page, the query rad* matched synonyms of 
 
 </table>
 
-<hr/>
+<br/>
 
 <center>
 
