--- a/html/Tutorial-results-2.html
+++ b/html/Tutorial-results-2.html
@@ -54,7 +54,7 @@
      </td>
 
 <!-- start of rest of stuff -->
-     <td>
+     <td class="footer-hr">
      
      <div class="tutorial-body">
 
@@ -68,7 +68,7 @@
 
 	     <tr>
 	       <td colspan=5>
-                 <span class="welcome-header">Welcome to CellCircuits</span>
+
                  <div class="image">
                    <img id="tutorial-img" src="images/tutorial/CC-results-2.gif" border=0 usemap="#home_tutorial_map" title="Home Tutorial image"></img>
                  </div>
@@ -163,7 +163,7 @@
 
 </table>
 
-<hr/>
+<br>
 
 <center>
 
