Improved readablility of about page

--- a/html/about_cell_circuits.html
+++ b/html/about_cell_circuits.html
@@ -40,25 +40,22 @@
     </tr>
   </table>
 
+  <br>
   <table align="center" width="60%">
     <tr>
       <td align="left" colspan="2">
         <div class="explanation" align="left">
 	  <p>
-<h2><font style="text-decoration: underline;">What is CellCircuits?</font></h2>
-	  <p>CellCircuits is an open-access <font style="color:#8DA4AE; font-weight:bold;" size="+2">database of molecular network models</font>,
-designed to <font style="font-weight: bold; color:orange;" size="+2">bridge the gap</font> between databases of individual pair-wise
-molecular interactions and databases of validated pathways.  CellCircuits
-captures the output from an increasing number of approaches that screen
-molecular interaction networks to identify <font style="font-weight: bold; color:#69AF93;" size="+2">functional subnetworks</font>, based
-on their correspondence with expression or phenotypic data, their internal
+<!--<h2><font style="text-decoration: underline;">What is CellCircuits?</font></h2> -->
+	  <p><font style="color:black; font-weight:bold;" size="+1"> An open-access database of molecular network models that...</font>
+
+<ul>
+<li><font class="about-keywords">Bridges the gap</font> between databases of individual pair-wise
+molecular interactions and databases of validated pathways.  
+<li><font class="about-keywords">Contains functional network hypothesis</font> produced by algorithms that screen molecular interaction networks based on their correspondence with expression or phenotypic data, their internal
 structure, or their conservation across species.  
-</p>
-<br>
-<p>Models are available
-either as images or in machine-readable formats and can be <font style="font-weight: bold; color:red;" size="+2">queried</font> by the
-names of proteins they contain or by their enriched biological functions. 
-CellCircuits is designed as a <font style="font-weight: bold; color:orange;" size="+2">clearinghouse</font> in which theorists may
+<li><font class="about-keywords">Is searchable</font> using protein/gene names and Gene Ontology terms.  Models are available either as images or in machine-readable formats.
+<li><font class="about-keywords">Serves as a clearinghouse</font> in which theorists may
 distribute or revise models in need of validation and experimentalists may
 search for models or specific hypotheses relevant to their interests.
 	  </p><br />
@@ -74,9 +71,10 @@ search for models or specific hypotheses relevant to their interests.
         <div class="explanation" align="left">
 	  <p>
 	    <hr>
-	    <h2><font style="text-decoration: underline;">Features</font></h2>
-	    <b>Search the network models in Cell Circuits ...</b>
+	    <br>
+	    <b>Search the network models in CellCircuits ...</b>
 	    <br>(try entering the words in <font class="example">underline bold</font> into the search box or click on the examples below)
+	    <br>
             <ul>
 	      <li><b>By gene</b>
 	      <ul>
