Updated text on about page. Added Google site info to index.html Added tags for new about page to master.css

--- a/html/about_cell_circuits.html
+++ b/html/about_cell_circuits.html
@@ -40,27 +40,20 @@
     </tr>
   </table>
 
+  <br>
   <table align="center" width="60%">
     <tr>
       <td align="left" colspan="2">
         <div class="explanation" align="left">
 	  <p>
-<h2>What is CellCircuits?</h2>
-	  <p>CellCircuits is an open-access database of molecular network models,
-designed to bridge the gap between databases of individual pair-wise
-molecular interactions and databases of validated pathways.  CellCircuits
-captures the output from an increasing number of approaches that screen
-molecular interaction networks to identify functional subnetworks, based
-on their correspondence with expression or phenotypic data, their internal
-structure, or their conservation across species.  
-</p>
-<br>
-<p>Models are available
-either as images or in machine-readable formats and can be queried by the
-names of proteins they contain or by their enriched biological functions. 
-CellCircuits is designed as a clearinghouse in which theorists may
-distribute or revise models in need of validation and experimentalists may
-search for models or specific hypotheses relevant to their interests.
+	  <p><font style="color:black; font-weight:bold;" size="+1"> An open-access database of molecular network models that:</font>
+
+<ul>
+<li><font class="about-keywords">Bridges the gap</font> between databases of individual pair-wise
+molecular interactions and databases of validated pathways.  
+<li><font class="about-keywords">Contains functional network hypothesis</font> produced by algorithms that screen molecular interaction networks based on their correspondence with expression or phenotypic data, their internal
+<li><font class="about-keywords">Is searchable</font> using protein/gene names and Gene Ontology terms.  Models are available either as images or in machine-readable formats.
+<li><font class="about-keywords">Serves as a clearinghouse</font> in which theorists may distribute or revise models in need of validation and experimentalists may search for models or specific hypotheses relevant to their interests.
 	  </p><br />
 	</div>
       </td>
@@ -74,9 +67,10 @@ search for models or specific hypotheses relevant to their interests.
         <div class="explanation" align="left">
 	  <p>
 	    <hr>
-	    <h2>Features</h2>
-	    <b>Search the network models in Cell Circuits ...</b>
+	    <br>
+	    <b>Search the network models in CellCircuits ...</b>
 	    <br>(try entering the words in <font class="example">underline bold</font> into the search box or click on the examples below)
+	    <br>
             <ul>
 	      <li><b>By gene</b>
 	      <ul>
@@ -91,23 +85,13 @@ search for models or specific hypotheses relevant to their interests.
 	      <li>Use partial or complete GO term names (enclosed in double quotes) (e.g. <a class="example" href="/cgi-bin/search/v1.0/search.pl?search_query=%22DNA%20binding%22">"DNA binding"</a>)</li>
             </ul>
 	    </ul>
-<!--
-            <h2>Examples</h2> (try entering words in <b><code>bold</code></b> into search box)
-	    <ul>
-              <li>Yeast models: <b>AAP1, GCN*</b></li>
-              <li>Fly models: <b>B0025.2</b></li> 
-              <li>Worm models: <b>CG2849</b></li>
-              <li>Models enriched for GO term: <b>GO:0003677</b></li>
-              <li>Models enriched for GO terms containing words (enclose in double quotes): <b>"DNA binding"</b></li>
-            </ul>
--->
 	  </p>
 	</div>
       </td>
     </tr>
 
     <tr>
-      <td align="center" colspan="2"><br><br>
+      <td align="center" colspan="2">
         <a class="white-bg-link" href="index.html" title="Click to go to the CellCircuits Home Page">CellCircuits&nbsp;Home</a>&nbsp;&nbsp;|&nbsp;&nbsp;
         <a class="white-bg-link" href="advanced_search.html">Advanced Search</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 	<a class="white-bg-link" href="Tutorial-home.html">Help</a>&nbsp;&nbsp;|&nbsp;&nbsp;
@@ -115,11 +99,6 @@ search for models or specific hypotheses relevant to their interests.
         <a class="white-bg-link" href="http://ucsd.edu">UCSD</a>
 	<p style="font-style:italic;font-size: 0.8em">Funding provided by the National Science Foundation (NSF 0425926).</p>
 	<hr />
-	<p class="credits">Questions? Comments? Suggestions? Please see the 
-          <a href="http://groups.google.com/group/CellCircuits">archives</a>
-          or send email to 
-          <a href="mailto:CellCircuits@googlegroups.com?subject=[CellCircuits]">CellCircuits@googlegroups.com</a>
-        </p>
       </td>
     </tr>
   </table>
