--- a/html/index.html
+++ b/html/index.html
@@ -4,9 +4,11 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
   <meta name="author"      content="Mike Daly, Craig Mak" />
-  <meta name="keywords"    content="biological networks, network models, systems biology, pathway hypotheses" />
+  <meta name="keywords"    content="biological networks, network models, systems biology, pathway hypotheses, protein network" />
   <meta name="description" content="CellCircuits" />
   <meta name="robots"      content="all" />
+
+  <META name="verify-v1" content="CWIdYka5MmVtMrYI6Prw6p6mHSEiqKPSLrodO/l7Kqg=" />
 
   <script type="text/javascript" src="javascript/advanced_search.js"></script>
   <script src="javascript/scriptaculous.js" type="text/javascript"></script>
@@ -61,6 +63,8 @@
   <input type="hidden" name="publication"  value="Sharan2005_PNAS"            checked="checked" />
   <input type="hidden" name="publication"  value="Suthram2005_Nature"         checked="checked" />
   <input type="hidden" name="publication"  value="Yeang2005_GB"               checked="checked" />
+  <input type="hidden" name="publication"  value="Chuang2006"               checked="checked" />
+
 
   <input type="hidden" name="species" value="Saccharomyces cerevisiae" checked="checked" />
   <input type="hidden" name="species" value="Caenorhabditis elegans"   checked="checked" />
