Created template file for updating hidden fields

--- a/html/Tutorial-advanced-search.html
+++ b/html/Tutorial-advanced-search.html
@@ -141,7 +141,7 @@
              <tr valign=top>
                <td colspan=2>
 
-                 Models are sorted by the number of matching query terms, <em>i.e</em>. gene names, GO term accessions, and/or GO term names.  Currently this is the only choice available.  More sorting/scoring metrics will be available soon.
+                 Models are sorted by the number of matching query terms, <em>i.e</em>. gene names, GO term accessions, and/or GO term names.  Currently this is the only choice available.
 
                </td>
 
