--- a/html/Tutorial-results-1.html
+++ b/html/Tutorial-results-1.html
@@ -124,7 +124,7 @@ In the example image at the top of the page, the query rad* matched synonyms of 
 
                <td colspan=2 valign=top>
 
-	         Models are scored by the number of matching query terms, <em>i.e.</em> gene names, GO term accessions, and/or GO term names.<br>When viewing similar models, this score is the number of genes shared between the Query model and the model on each row of the results.
+	         Models are scored by the number of matching query terms (gene names, GO term accessions, and/or GO term names).<br>When viewing similar models, this score is the number of genes shared between the Query model and the model on each row of the results.
 
                </td>
 
