Fixed a typo in Search explanation

--- a/html/Tutorial-home.html
+++ b/html/Tutorial-home.html
@@ -109,7 +109,7 @@
              <tr>
                <td colspan=2>
 
-                 Search terms, separated by a space, include:
+                 Search terms, separated by a space, may include:
                  <ul>
                    <li>Exact gene names (e.g. gcn4, rad52, gal4, yap6)
                    <li>Fuzzy gene names including the '*' character (e.g. gcn*, rad*, gal*, yap*)
