--- a/html/advanced_search.html
+++ b/html/advanced_search.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="/javascript/advanced_search.js"></script>
   <script src="/javascript/scriptaculous.js" type="text/javascript"></script>
 
-  <link type="text/css" rel="stylesheet" href="master.css">
+  <link type="text/css" rel="stylesheet" href="css/master.css">
 
   <title>Cell Circuits Advanced Search</title>
 
@@ -36,7 +36,7 @@
     </tr>
     <tr>
       <td align='center' valign='top'>
-        <input type="submit" name="search_query_button" value="Search" title='Click to find models matching your query'/><input type="submit" value="Load Example Query" title="requires javaScript" onClick="LoadExampleQuery('gcn* gal4 GO:0003677','DNA binding');return false;" />
+        <input type="submit" name="search_query_button" value="Search" title='Click to find models matching your query'/><input type="submit" value="Load Example Query" title="requires javaScript" onClick="LoadExampleQuery('rad51 GO:0006950 ercc1_human', 'DNA repair');return false;" />
       </td>
     </tr>
   </table>
@@ -333,15 +333,9 @@
 	  </a>
 	</p>
       </td>
-      <td class="advanced-search-cover">
-        <input type="checkbox" name="publication" value="BandyopadhyayGersten2007" checked="checked" />
-      </td>
-      </td>
       <td class="advanced-search-cover">&nbsp;</td>
-      <td class="advanced-search-citation-right">
-      Bandyopadhyay S, et al.
-      <br>SUBMITTED (2007)
-      </td>
+      <td class="advanced-search-cover">&nbsp;</td>
+      <td class="advanced-search-citation-right">&nbsp;</td>
     </tr>
 
     <!--<tr><td colspan="8"><hr></td></tr>-->
