--- a/html/Tutorial-advanced-search.html
+++ b/html/Tutorial-advanced-search.html
@@ -11,217 +11,183 @@
   <script type="text/javascript" src="javascript/advanced_search.js"></script>
   <script src="javascript/scriptaculous.js" type="text/javascript"></script>
 
-  <link type="text/css" rel="stylesheet" href="master.css">
+  <!--<link type="text/css" rel="stylesheet" href="master.css">-->
+  <link type="text/css" rel="stylesheet" href="css/tutorial.css">
 
-  <title>Cell Circuits - Tutorial (Page 2/3) - Advanced Search</title>
+  <title>Cell Circuits - Tutorial (Page 2/4) - Advanced Search</title>
 
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 
 </head>
-
 <body>
 
-<center>
-
-<h1>Tutorial (Page 2/3) - Advanced Search</h1>
-
-<a  class="white-bg-link" href="Tutorial-home.html"><< Previous</a>&nbsp;&nbsp;
-<a  class="white-bg-link" href="http://www.cellcircuits.org">Back to CellCircuits</a>&nbsp;&nbsp;
-<a  class="white-bg-link" href="Tutorial-results.html">Next >></a>
-
-<img id="tutorial-img" src="Tutorial-advanced-search_v2.gif" border=0 usemap="#advanced_search_tutorial_map" title="Advanced Search tutorial image"></img>
-
-<map name="advanced_search_tutorial_map">
-<area shape="circle" coords="300,29,13"  href="#row1_explanation">
-<area shape="circle" coords="540,72,13"  href="#row2_explanation">
-<area shape="circle" coords="421,92,13" href="#row3_explanation">
-<area shape="circle" coords="500,148,13"  href="#row4_explanation">
-<area shape="circle" coords="102,206,13" href="#row5_explanation">
-<area shape="circle" coords="217,101,13" href="#row6_explanation">
-</map>
-
-<table id="ref_table" border=0 cellpadding=5 width="90%">
-
-<tr id="row1_reference">
-  <td align="right"><a href="#row1_explanation"><img class="button" src="1_blue.gif"></img></a></td>
-  <td><a class="white-bg-link" href="#row1_explanation">Search</a></td>
-  <td align="right"><a href="#row4_explanation"><img class="button" src="4_blue.gif"></img></a></td>
-  <td><a class="white-bg-link" href="#row4_explanation">P-value threshold</a></td>
-</tr>
-<tr id="row2_reference">
-  <td align="right"><a href="#row2_explanation"><img class="button" src="2_blue.gif"></img></a></td>
-  <td><a class="white-bg-link" href="#row2_explanation">Load an example</a></td>
-  <td align="right"><a href="#row5_explanation"><img class="button" src="5_blue.gif"></img></a></td>
-  <td><a class="white-bg-link" href="#row5_explanation">Limit search by publications</a></td>
-</tr>
-<tr id="row3_reference">
-  <td align="right"><a href="#row3_explanation"><img class="button" src="3_blue.gif"></img></a></td>
-  <td><a class="white-bg-link" href="#row3_explanation">Sorting</a></td>
-  <td align="right"><a href="#row6_explanation"><img class="button" src="6_blue.gif"></img></a></td>
-  <td><a class="white-bg-link" href="#row6_explanation">Limit search by species</a></td>
-</tr>
-
-</table>
-
-<br/>
-<hr/>
 
 
-<table border=0 cellpadding="5" cellspacing="5" width=800>
+<!--<table border=0 width=100%>-->
+<table border=0 width=800>
+  <tr>
+     <td valign=center>
+        <a href="http://www.cellcircuits.org"><img src="CC-logo-xxsmall.jpg" border=0></img></a>
+     </td>
 
-  <tr id="row1_explanation" valign="top">
-    <td>
-      <img src="1_blue.gif"></img>
-    </td>
-    <td>
-      <span style="font-size:24;"><strong><em>Search</em></strong></font></span>
-    </td>
-    <td width=600>
-
-   Valid queries are space-delimited, and include :
-   <ul>
-     <li>Exact gene names (e.g. gcn4, rad52, gal4, yap6)
-     <li>Fuzzy gene names including the '*' character (e.g. gcn*, rad*, gal*, yap*)
-     <li>GO term accessions (e.g. GO:0006366, GO:0004402)
-     <li>Full or partial GO term names enclosed in double-quotes (e.g. "DNA binding", "cell cycle", "acetylation", "cytoplasm")
-   </ul>
-
-   Any combination of the above is valid, however longer and more complex queries will 
-   take longer than simple ones.<br/><br/>
-
-   Searches using the '*' character may match many different gene names across multiple organisms.  Moreover, these searches take longer, so use them wisely (as in the examples above like yap* and gcn*, where families of genes have been grouped by name).<br/><br/>
-
-   To find GO term accessions, term names, or simply to learn more about the GO project, please visit the <a class="white-bg-link" href="http://www.geneontology.org">GO homepage</a>.<br/><br/>
-
-
-	   <center><a class="white-bg-link" href="#tutorial-img">Back to top</a></center>
-	   <hr/>
-   
-
-    </td>
-  </tr>
-  <tr id="row2_explanation" valign="top">
-    <td>
-      <img src="2_blue.gif"></img>
-    </td>
-    <td>
-      <span style="font-size:24;"><strong><em>Load an Example</em></strong></span>
-    </td>
-    <td>
-      At a loss for how to start?  Click this button and a 
-      valid example query will populate the search box.<br/><br/>
-
-	   <center><a class="white-bg-link" href="#tutorial-img">Back to top</a></center>
-	   <hr/>
-
-    </td>
-  </tr>
-  <tr id="row3_explanation" valign="top">
-    <td>
-      <img src="3_blue.gif"></img>
-    </td>
-
-    <td>
-      <span style="font-size:24;"><strong><em>Sorting</em></strong></span>
-    </td>
-    <td>
-
-    Models are sorted by the number of matching query terms, i.e. gene names or GO term accessions/names.
-    More sort options may be added in the future.
-<!--   <a class="white-bg-link" href="FAQ">For a more in depth explanation, see FAQ.</a><br/><br/> -->
-
-
-	   <center><a class="white-bg-link" href="#tutorial-img">Back to top</a></center>
-	   <hr/>
-
-    </td>
+     <td class="tutorial-title-header" align=left valign=bottom>Tutorial (2 of 4)</td>
 
   </tr>
-  <tr id="row4_explanation" valign="top">
-    <td>
-      <img src="4_blue.gif"></img>
-    </td>
+  <tr>
+     <td align=center valign=top width=200 class="left-col">
+       <br>
 
-    <td>
-      <span style="font-size:24;"><strong><em>P-value threshold</em></strong></span>
-    </td>
-    <td>
-      All search results are filtered using a P-value cutoff.  Valid P-values must be between 0 and 1 and may be entered in decimal or scientific notation (e.g. 0.001 or 1e-3). <br/><br/>
+       <div class="left-col">
+         <a class="blue-link" href="http://cellcircuits.org" title="CellCircuits Home">CellCircuits Home</a><br><br>
+	 <a class="blue-link" href="about_cell_circuits.html" title="About CellCircuits">About CellCircuits</a><br><br>
+         <a class="black-no-decoration-link" href="Tutorial-home.html" title="Have Questions? Take the Cellcircuits tour">Tutorial</a><br><br>
+         <a class="blue-indented-link" href="Tutorial-home.html">Welcome</a><br><br>
+         <a class="grey-indented-no-decoration-link" href="Tutorial-advanced-search.html">Advanced Search</a><br><br>
+         <a class="blue-indented-link" href="Tutorial-results-1.html">Results - 1 of 2</a><br><br>
+         <a class="blue-indented-link" href="Tutorial-results-2.html">Results - 2 of 2</a><br><br>
+         <a class="blue-link" href="http://www-bioeng.ucsd.edu/faculty/area/ideker_lab" title="Dr. Trey Ideker's Lab Home Page">Ideker Lab</a><br><br>
+         <a class="blue-link" href="http://www-bioeng.ucsd.edu/" title="UCSD Bioengineering Home Page">UCSD</a><br>
+
+       </div>
+
+
+     </td>
+
+<!-- start of rest of stuff -->
+     <td class="footer-hr">
+     
+     <div class="tutorial-body">
+
+           <table border=0>
+
+	      <tr>
+	        <td colspan=5 align=right>
+	          <a href="Tutorial-home.html"><img src="images/tutorial/red-back.gif" align=absmiddle border=0></img></a>
+                  <a href="Tutorial-results-1.html"><img src="images/tutorial/red-next.gif" align=absmiddle border=0></img></a>
+	        </td>
+	      </tr>
+
+	     <tr>
+	       <td colspan=5>
+                 <div class="image">
+                   <img id="tutorial-img" src="images/tutorial/CC-advanced-search.gif" border=0 usemap="#home_tutorial_map" title="Home Tutorial image"></img>
+                 </div>
+
+                 <map name="home_tutorial_map">
+                   <area shape="circle" coords="44,198,32"  href="#explanation">
+                   <area shape="circle" coords="410,282,32"  href="#explanation">
+                 </map>
+
+	       </td>
+	     </tr>
+
+             <tr id="explanation" valign="center">
+  
+               <td width=40 valign=center>
+                 <img src="images/tutorial/1_red.gif"></img>
+               </td>
+               <td width=250>
+	         <span class="explanation-header">Publications</span>
+               </td>
+
+	       <td>&nbsp;&nbsp;</td>
+
+               <td width=40 valign=center>
+                 <img src="images/tutorial/2_red.gif"></img>
+               </td>
+               <td width=250>
+                  <span class="explanation-header">Select Species</span>
+               </td>
+
+             </tr>
+
+             <tr valign=top>
+               <td colspan=2>
+
+	         Limit the search by publication.  All publications are selected by default.
+
+               </td>
+
+	       <td>&nbsp;&nbsp;</td>
+
+               <td colspan=2 valign=top>
+
+	         Hold down the 'Ctrl' key to select/exclude species from your search.  All species are selected by default.
+
+               </td>
+
+             </tr>
+
+             <tr id="explanation" valign="center">
+  
+               <td width=40 valign=center>
+                 <img src="images/tutorial/3_red.gif"></img>
+               </td>
+               <td width=250>
+                 <span class="explanation-header">Sort</span>
+               </td>
+
+	       <td>&nbsp;&nbsp;</td>
+
+               <td width=40 valign=center>
+                 <img src="images/tutorial/4_red.gif"></img>
+               </td>
+               <td width=250>
+                 <span class="explanation-header">P-value threshold</span>
+               </td>
+
+             </tr>
+
+             <tr valign=top>
+               <td colspan=2>
+
+                 Models are sorted by the number of matching query terms, <em>i.e</em>. gene names, GO term accessions, and/or GO term names.  Currently this is the only choice available.
+
+               </td>
+
+	       <td>&nbsp;&nbsp;</td>
+
+               <td colspan=2 valign=top>
+
+	         All search results are filtered using a P-value cutoff.  Valid P-values must be between 0 and 1 and may be entered in decimal or scientific notation (<em>e.g.</em> 0.001 or 1e-3). <br/><br/>
       
       <b>NOTE: To find all models containing a specific gene, use a P-value cutoff of 1.</b>
       <br>
       Smaller P-values limit the search, yielding fewer search results.<br/<br/>
 
+               </td>
 
-      <table cellpadding=5>
-      <tr>
-        <td>
-	<img align="top" src="hypergeometric-cartoon.jpg"></img>
-        </td>
-	<td>
-	  Models were scored for GO annotation enrichment using the <a class="white-bg-link" href="http://en.wikipedia.org/wiki/Hypergeometric">hypergeometric test</a>.
-	  The P-value of an enrichment indicates the significance of the overlap, <strong><em>K</em></strong>, between an annotation with <strong><em>A</em></strong> genes and a model with <strong><em>M</em></strong> genes.  This P-value has not been corrected for multiple hypothesis testing.
-	</td>
-      </tr>
-      </table>
-
-<!--      <a class="white-bg-link" href="FAQ">What is meant by P-value and how is it calculated?</a><br/><br/>-->
+             </tr>
 
 
-	   <center><a class="white-bg-link" href="#tutorial-img">Back to top</a></center>
-	   <hr/>
+	     <tr>
+	       <td colspan=5 align=right>
+	         <a href="Tutorial-home.html"><img src="images/tutorial/red-back.gif" align=absmiddle border=0></img></a>
+	         <a href="Tutorial-results-1.html"><img src="images/tutorial/red-next.gif" align=absmiddle border=0></img></a>
+	       </td>
+             </tr>
+           </table>
 
-    </td>
+<!-- end of main stuff -->
 
+     </div> <!-- end of class-"tutorial-body" -->
 
+     </td>
 
   </tr>
-  <tr id="row5_explanation" valign="top">
-    <td>
-      <img src="5_blue.gif"></img>
-    </td>
 
-    <td>
-      <span style="font-size:24;"><strong><em>Publications</em></strong></span>
-    </td>
-    <td>
-      Limit the search by publication.  At least one publication must be selected.  Hold down the 'Ctrl' key to select more than one publication.  By default, all eleven publications are selected.<br/><br/>
-
-	   <center><a class="white-bg-link" href="#tutorial-img">Back to top</a></center>
-	   <hr/>
-    </td>
-
-
-
-
-  </tr>
-  <tr id="row6_explanation" valign="top">
-    <td>
-      <img src="6_blue.gif"></img>
-    </td>
-
-    <td>
-      <span style="font-size:24;"><strong><em>Species Selection</em></strong></span>
-    </td>
-    <td>
-      Limit the search by species.  At least one species must be selected.  Hold down the 'Ctrl' key to select more than one species.  By default, all species are selected.<br/><br/>
-
-
-	   <center><a class="white-bg-link" href="#tutorial-img">Back to top</a></center>
-
-    </td>
-
-
-  </tr>
 </table>
 
-<hr/>
+<br/>
 
-<a class="white-bg-link" href="index.html" title="Click to go to the CellCircuits Home Page">CellCircuits&nbsp;Home</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-<a class="white-bg-link" href="about_cell_circuits.html">About CellCircuits</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-<a class="white-bg-link" href="Tutorial-home.html">Help</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-<a class="white-bg-link" href="http://www-bioeng.ucsd.edu/faculty/area/ideker_lab">Ideker Lab</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-<a class="white-bg-link" href="http://www-bioeng.ucsd.edu/">UCSD</a><br />
+<center>
+
+
+<a class="blue-link" href="http://cellcircuits.org" title="CellCircuits Home Page">CellCircuits&nbsp;Home</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+<a class="blue-link" href="about_cell_circuits.html" title="About Cellcircuits">About CellCircuits</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+<a class="blue-link" href="Tutorial-home.html" title="Have Questions? Take the Cellcircuits tour">Help</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+<a class="blue-link" href="http://www-bioeng.ucsd.edu/faculty/area/ideker_lab" title="Dr. Trey Ideker's Lab Home Page">Ideker Lab</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+<a class="blue-link" href="http://www-bioeng.ucsd.edu/" title="UCSD Bioengineering Home Page">UCSD</a><br />
 <p style="font-size: 0.8em">Funding provided by the National Science Foundation (NSF 0425926).</p>
 
 </center>
