--- a/html/about_cell_circuits.html
+++ b/html/about_cell_circuits.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="/javascript/advanced_search.js"></script>
   <script src="/javascript/scriptaculous.js" type="text/javascript"></script>
 
-  <link type="text/css" rel="stylesheet" href="/master.css">
+  <link type="text/css" rel="stylesheet" href="css/master.css">
 
   <title>About Cell Circuits</title>
 
@@ -35,7 +35,7 @@
     </tr>
     <tr>
       <td align='center' valign='top'>
-        <input type="submit" name="search_query_button" value="Search" title='Click to find models matching your query'/><input type="submit" value="Load Example Query" title="requires javaScript" onClick="LoadExampleQuery('gcn* gal4 GO:0003677','DNA binding');return false;" />
+        <input type="submit" name="search_query_button" value="Search" title='Click to find models matching your query'/><input type="submit" value="Load Example Query" title="requires javaScript" onClick="LoadExampleQuery('rad51 GO:0006950 ercc1_human', 'DNA repair');return false;" />
       </td>
     </tr>
   </table>
@@ -46,18 +46,14 @@
       <td align="left" colspan="2">
         <div class="explanation" align="left">
 	  <p>
-<!--<h2><font style="text-decoration: underline;">What is CellCircuits?</font></h2> -->
-	  <p><font style="color:black; font-weight:bold;" size="+1"> An open-access database of molecular network models that...</font>
+	  <p><font style="color:black; font-weight:bold;" size="+1"> An open-access database of molecular network models that:</font>
 
 <ul>
 <li><font class="about-keywords">Bridges the gap</font> between databases of individual pair-wise
 molecular interactions and databases of validated pathways.  
-<li><font class="about-keywords">Contains functional network hypothesis</font> produced by algorithms that screen molecular interaction networks based on their correspondence with expression or phenotypic data, their internal
-structure, or their conservation across species.  
+<li><font class="about-keywords">Contains functional network hypothesis</font> produced by algorithms that screen molecular interaction networks based on their correspondence with expression or phenotypic data, their internal structure, or their conservation across species.
 <li><font class="about-keywords">Is searchable</font> using protein/gene names and Gene Ontology terms.  Models are available either as images or in machine-readable formats.
-<li><font class="about-keywords">Serves as a clearinghouse</font> in which theorists may
-distribute or revise models in need of validation and experimentalists may
-search for models or specific hypotheses relevant to their interests.
+<li><font class="about-keywords">Serves as a clearinghouse</font> in which theorists may distribute or revise models in need of validation and experimentalists may search for models or specific hypotheses relevant to their interests.
 	  </p><br />
 	</div>
       </td>
@@ -89,16 +85,6 @@ search for models or specific hypotheses relevant to their interests.
 	      <li>Use partial or complete GO term names (enclosed in double quotes) (e.g. <a class="example" href="/cgi-bin/search/v1.0/search.pl?search_query=%22DNA%20binding%22">"DNA binding"</a>)</li>
             </ul>
 	    </ul>
-<!--
-            <h2>Examples</h2> (try entering words in <b><code>bold</code></b> into search box)
-	    <ul>
-              <li>Yeast models: <b>AAP1, GCN*</b></li>
-              <li>Fly models: <b>B0025.2</b></li> 
-              <li>Worm models: <b>CG2849</b></li>
-              <li>Models enriched for GO term: <b>GO:0003677</b></li>
-              <li>Models enriched for GO terms containing words (enclose in double quotes): <b>"DNA binding"</b></li>
-            </ul>
--->
 	  </p>
 	</div>
       </td>
@@ -106,27 +92,20 @@ search for models or specific hypotheses relevant to their interests.
 
     <tr>
       <td align="center" colspan="2">
-	<hr />
         <a class="white-bg-link" href="index.html" title="Click to go to the CellCircuits Home Page">CellCircuits&nbsp;Home</a>&nbsp;&nbsp;|&nbsp;&nbsp;
         <a class="white-bg-link" href="advanced_search.html">Advanced Search</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 	<a class="white-bg-link" href="Tutorial-home.html">Help</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 	<a class="white-bg-link" href="http://chianti.ucsd.edu/idekerlab/index.html">Ideker Lab</a>&nbsp;&nbsp;|&nbsp;&nbsp;
         <a class="white-bg-link" href="http://ucsd.edu">UCSD</a>
 	<p style="font-style:italic;font-size: 0.8em">Funding provided by the National Science Foundation (NSF 0425926).</p>
-<!--
-
-	<p class="credits">Questions? Comments? Suggestions? Please see the 
-          <a href="http://groups.google.com/group/CellCircuits">archives</a>
-          or send email to 
-          <a href="mailto:CellCircuits@googlegroups.com?subject=[CellCircuits]">CellCircuits@googlegroups.com</a>
-        </p>
--->
+	<hr />
       </td>
     </tr>
   </table>
 
+<!-- HIDDEN TAGS -->
   <input type="hidden" name="results_page" value="1" checked="checked" />
-  <input type="hidden" name="sort_method"  value="optionA_by_number_of_query_terms_matching_model" checked="checked" />
+  <input type="hidden" name="sort_method"   value="optionA_by_number_of_query_terms_matching_model" checked="checked" />
   <input type="hidden" name="pval_thresh"  value="0.0001" checked="checked" />
   <input type="hidden" name="publication"  value="Begley2002_MCR"             checked="checked" />
   <input type="hidden" name="publication"  value="Bernard2005_PSB"            checked="checked" />
@@ -140,7 +119,6 @@ search for models or specific hypotheses relevant to their interests.
   <input type="hidden" name="publication"  value="Sharan2005_PNAS"            checked="checked" />
   <input type="hidden" name="publication"  value="Suthram2005_Nature"         checked="checked" />
   <input type="hidden" name="publication"  value="Yeang2005_GB"               checked="checked" />
-  <input type="hidden" name="publication"  value="BandyopadhyayGersten2007"               checked="checked" />
 
   <input type="hidden" name="species" value="Saccharomyces cerevisiae" checked="checked" />
   <input type="hidden" name="species" value="Caenorhabditis elegans"   checked="checked" />
