--- a/html/index.html
+++ b/html/index.html
@@ -4,14 +4,16 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
   <meta name="author"      content="Mike Daly, Craig Mak" />
-  <meta name="keywords"    content="biological networks, network models, systems biology, pathway hypotheses" />
+  <meta name="keywords"    content="biological networks, network models, systems biology, pathway hypotheses, protein network" />
   <meta name="description" content="CellCircuits" />
   <meta name="robots"      content="all" />
+
+  <META name="verify-v1" content="CWIdYka5MmVtMrYI6Prw6p6mHSEiqKPSLrodO/l7Kqg=" />
 
   <script type="text/javascript" src="javascript/advanced_search.js"></script>
   <script src="javascript/scriptaculous.js" type="text/javascript"></script>
 
-  <link type="text/css" rel="stylesheet" href="master.css">
+  <link type="text/css" rel="stylesheet" href="css/master.css">
 
   <title>Cell Circuits - A searchable repository of published network model hypotheses</title>
 
@@ -30,7 +32,7 @@
     </tr>
     <tr>
       <td align='center' valign='top'>
-        <input type="submit" name="search_query_button" value="Search" title='Click to find models matching your query'/><input type="submit" value="Load Example Query" title="requires javaScript" onClick="LoadExampleQuery('gcn* gal4 GO:0003677','DNA binding');return false;" />
+        <input type="submit" name="search_query_button" value="Search" title='Click to find models matching your query'/><input type="submit" value="Load Example Query" title="requires javaScript" onClick="LoadExampleQuery('rad51 GO:0006950 ercc1_human', 'DNA repair');return false;" />
       </td>
     </tr>
   </table>
@@ -46,6 +48,7 @@
     <p style="font-style:italic;font-size: 0.8em">Funding provided by the National Science Foundation (NSF 0425926).</p>
   </center>
 
+<!-- HIDDEN TAGS -->
   <input type="hidden" name="results_page" value="1" checked="checked" />
   <input type="hidden" name="sort_method"   value="optionA_by_number_of_query_terms_matching_model" checked="checked" />
   <input type="hidden" name="pval_thresh"  value="0.0001" checked="checked" />
@@ -61,9 +64,6 @@
   <input type="hidden" name="publication"  value="Sharan2005_PNAS"            checked="checked" />
   <input type="hidden" name="publication"  value="Suthram2005_Nature"         checked="checked" />
   <input type="hidden" name="publication"  value="Yeang2005_GB"               checked="checked" />
-  <input type="hidden" name="publication"  value="BandyopadhyayGersten2007"               checked="checked" />
-  <input type="hidden" name="publication"  value="Chuang2006"               checked="checked" />
-
 
   <input type="hidden" name="species" value="Saccharomyces cerevisiae" checked="checked" />
   <input type="hidden" name="species" value="Caenorhabditis elegans"   checked="checked" />
