Add links to data_submission page and admin page

--- a/www/html/cellcircuits/index.html
+++ b/www/html/cellcircuits/index.html
@@ -44,7 +44,7 @@
   <br /><br />
 
   <center>
-    <a class="white-bg-link" href="advanced_search.php">Advanced Search</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+    <a class="white-bg-link" href="advanced_search.php">Advanced Search</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="white-bg-link" href="data_submit_step1.php">Submit My Data</a> | <a class="white-bg-link" href="cc_admin.php">Admin Only</a> | 
     <a class="white-bg-link" href="about_cell_circuits.html">About CellCircuits</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a class="white-bg-link" href="Tutorial-home.html">Help</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a class="white-bg-link" href="http://chianti.ucsd.edu/idekerlab/index.html">Ideker Lab</a>&nbsp;&nbsp;|&nbsp;&nbsp;
