Correct a sample gene name

--- a/www/html/cellcircuits/index.html
+++ b/www/html/cellcircuits/index.html
@@ -31,8 +31,8 @@
       </td>
     </tr>
     <tr>
-      <td align='center' valign='top'>
-        <input type="submit" name="search_query_button" value="Search" title='Click to find models matching your query'/><input type="submit" value="Load Example Query" title="requires javaScript" onClick="LoadExampleQuery('rad51 GO:0006950 ercc1_human', 'DNA repair');return false;" />
+      <td align="center" valign="top">
+        <input type="submit" name="search_query_button" value="Search" title='Click to find models matching your query'/><input type="submit" value="Load Example Query" title="requires javaScript" onClick="LoadExampleQuery('rad51 GO:0006950 ercc1', 'DNA repair');return false;" />
       </td>
     </tr>
   </table>
